--- a/content/xaml/GameGui.xaml
+++ b/content/xaml/GameGui.xaml
@@ -7,6 +7,9 @@
 	xmlns:local="clr-namespace:IngnomiaGUI"
     xmlns:noesis="clr-namespace:NoesisGUIExtensions;assembly=Noesis.GUI.Extensions"
 	FontFamily="Fonts/#8-bit Operator+"
+    KeyboardNavigation.DirectionalNavigation="None"
+    KeyboardNavigation.TabNavigation="None"
+    KeyboardNavigation.ControlTabNavigation="None"
 	x:Name="GameGuiRoot" Focusable="True" IsTabStop="False" d:DataContext="{d:DesignData /SampleData/GameModelSampleData.xaml}" d:DesignWidth="1920" d:DesignHeight="1080">
     <UserControl.DataContext>
         <local:GameModel/>
