--- a/content/xaml/LoadGamePage.xaml
+++ b/content/xaml/LoadGamePage.xaml
@@ -67,7 +67,7 @@
                     <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="0">
 						<TextBlock FontSize="20" Text="Here will be info about the selected game." TextWrapping="Wrap" Margin="5"/>
                     </ScrollViewer>
-                    <Button x:Name="BuLoadGame" FontSize="20" Content="Load" Margin="5" Grid.Row="1" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainMenu}}, Path=DataContext.ContinueGame }" CommandParameter="{Binding SelectedGame.Path}"/>
+                    <Button x:Name="BuLoadGame" FontSize="20" Content="Load" Margin="5" Grid.Row="1" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainMenu}}, Path=DataContext.ContinueGame }" CommandParameter="{Binding SelectedGame}"/>
 				</Grid>
 				
 				
