--- a/content/xaml/MainPage.xaml
+++ b/content/xaml/MainPage.xaml
@@ -51,21 +51,22 @@
 		
 		<Viewbox Grid.Row="1" Grid.Column="1" StretchDirection="DownOnly">
 		<StackPanel>
-			<Button x:Name="MMContinue"  Style="{StaticResource MenuButtonStyle}" Content="Continue" Command="{Binding ContinueGame}"/>
+			<Button x:Name="MMContinue"  Style="{StaticResource LoadButtonStyle}" Content="Continue" Command="{Binding ContinueGame}"/>
 			<Button x:Name="MMNewGame"   Style="{StaticResource MenuButtonStyle}" Content="New Game" Command="{Binding NewGame}"/>
 			<Button x:Name="MMSetupGame" Style="{StaticResource MenuButtonStyle}" Content="Set up Game" Command="{Binding SetupGame}"/>
 			<Button x:Name="MMLoadGame"  Style="{StaticResource MenuButtonStyle}" Content="Load Game" Command="{Binding LoadGame}"/>
 			<Button x:Name="MMSettings"    Style="{StaticResource MenuButtonStyle}" Content="Settings" Command="{Binding Settings}" />
 			<Button x:Name="MMExit"      Style="{StaticResource MenuButtonStyle}" Content="Exit" Command="{Binding Exit}" />
-                <ComboBox x:Name="PrioritySelectorG" Margin="10,5,10,5" IsEditable="False" 
+                <!--<ComboBox x:Name="PrioritySelectorG" Margin="10,5,10,5" IsEditable="False" 
 								ItemTemplate="{StaticResource ItemTemplate}" >
-                    <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsEnabled}" Tag="IsEnabled"/>
+                    <ComboBoxItem Content="Gui Updated With This Run 2" IsSelected="True"/>
+                    <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsEnabled}"/>
                     <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsEditable}"/>
                     <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsFocused}"/>
                     <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsKeyboardFocused}"/>
-                    <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsKeyboardFocusWithin}" IsSelected="True"/>
+                    <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsKeyboardFocusWithin}"/>
                     <ComboBoxItem Content="{Binding ElementName=PrioritySelectorG, Path=IsTabStop}"/>
-                </ComboBox>
+                </ComboBox>-->
                 <Grid>
 				<ContentControl Style="{StaticResource HintStyle}" Content="Continue the last saved game." IsEnabled="{Binding IsMouseOver, ElementName=MMContinue}"/>
 				<ContentControl Style="{StaticResource HintStyle}" Content="Start a new game with previous settings." IsEnabled="{Binding IsMouseOver, ElementName=MMNewGame}"/>
