--- a/content/xaml/WaitPage.xaml
+++ b/content/xaml/WaitPage.xaml
@@ -41,8 +41,11 @@
 		<TextBlock Grid.Row="0" Grid.Column="1" FontSize="100" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Creating Game" />
 		
 		<Viewbox Grid.Row="1" Grid.Column="1">
-			<TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Please Wait" />
-		</Viewbox>
+            <StackPanel>
+				<TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Please Wait" />
+				<TextBlock FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Progress}" />
+            </StackPanel>
+        </Viewbox>
 	</Grid>
 
 </UserControl>
